--- a/about.html
+++ b/about.html
@@ -2,22 +2,25 @@
 <html lang="en">
 
 <head>
-  <title>Home</title>
+  <title>About</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/lightgallery.min.css">
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/slideshow.css" />
-  <script src="js/slideshow/modernizr.custom.js"></script>
+  <style>
+
+  </style>
 </head>
 
 <body>
 
   <div class="site-wrap">
-
     <div class="site-mobile-menu">
       <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close mt-3">
@@ -28,7 +31,6 @@
     </div>
 
     <header class="site-navbar py-3" role="banner">
-
       <div class="container-fluid">
         <div class="row align-items-center">
 
@@ -40,7 +42,6 @@
 
               <ul class="site-menu js-clone-nav mx-auto align-items-end d-none d-lg-block">
                 <li><a href="work.html">Work</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -54,36 +55,48 @@
                 class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
 
           </div>
-
         </div>
       </div>
     </header>
-    <div class="container">
-      <div class="main">
-        <ul id="cbp-bislideshow" class="cbp-bislideshow">
-          <li><img src="images/home/1.jpg" alt="image01" /></li>
-          <li><img src="images/home/2.jpg" alt="image02" /></li>
-          <li><img src="images/home/3.jpg" alt="image03" /></li>
-          <li><img src="images/home/4.jpg" alt="image04" /></li>
-          <li><img src="images/home/5.jpg" alt="image05" /></li>
-          <li><img src="images/home/6.jpg" alt="image06" /></li>
-          <li><img src="images/home/7.jpg" alt="image06" /></li>
-          <li><img src="images/home/8.jpg" alt="image06" /></li>
-        </ul>
+
+    <div class="site-section" data-aos="fade">
+      <div class="container-fluid">
+
+
+        <div class="row mb-5">
+          <div class="col-md-7">
+            <img src="images/esko.jpg" alt="Images" class="img-fluid">
+          </div>
+          <div class="col-md-4 ml-auto">
+            <h3 class="text-white">My Mission</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus,
+              ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae
+              fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta
+              repellendus, unde laborum quo nam, ullam facere voluptatem similique.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto excepturi aliquid minus
+              nostrum dicta labore iusto obcaecati fugit cupiditate.</p>
+          </div>
+        </div>
+
+
 
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/slideshow/jquery.imagesloaded.min.js"></script>
-    <script src="js/slideshow/cbpBGSlideshow.min.js"></script>
-    <script>
-      $(function () {
-        cbpBGSlideshow.init();
-      });
-    </script>
+
   </div>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/aos.js"></script>
+  <script src="js/lightgallery-all.min.js"></script>
   <script src="js/main.js"></script>
+
+  <script>
+    $(document).ready(function () {
+      $('#lightgallery').lightGallery();
+    });
+  </script>
+
 </body>
 
 </html>
