--- a/about.html
+++ b/about.html
@@ -64,17 +64,15 @@
 
 
         <div class="row mb-5">
-          <div class="col-md-7">
+          <div class="col-md-5 ml-auto">
             <img src="images/esko.jpg" alt="Images" class="img-fluid">
           </div>
-          <div class="col-md-4 ml-auto">
-            <h3 class="text-white">My Mission</h3>
+          <div class="col-md-4 ml-auto mr-auto">
+
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus,
               ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae
               fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta
-              repellendus, unde laborum quo nam, ullam facere voluptatem similique.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto excepturi aliquid minus
-              nostrum dicta labore iusto obcaecati fugit cupiditate.</p>
+            </p>
           </div>
         </div>
 
