--- a/work.html
+++ b/work.html
@@ -15,6 +15,11 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
+<style>
+  h2 {
+    text-transform: uppercase;
+  }
+</style>
 
 <body>
 
