--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <title>Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Esko" />
-  <meta name="description" content="Test"/>
+  <meta property="og:description"
+  content="test"/>
+  <meta property="og:title" content="Esko" />
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
