--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,18 @@
   <title>Contact</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="robots" content="noindex,nofollow">
 
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/lightgallery.min.css">
-  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/social-icons.css">
   <style>
     .site-section {
       margin-top: -10px;
@@ -133,7 +136,7 @@
                   <button type="submit" value="Send Message" class="btn py-2 px-4 text-white">Send
                     Message</button>
                 </div>
-                <input type="hidden" name="_next" value="http://127.0.0.1:3000/thank_you.html">
+                <input type="hidden" name="_next" value="https://eskoduraki/index.html">
               </div>
 
 
@@ -163,7 +166,16 @@
   </div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+
   <script src="js/aos.js"></script>
   <script src="js/lightgallery-all.min.js"></script>
 
