--- a/index.html
+++ b/index.html
@@ -2,17 +2,30 @@
 <html lang="en">
 
 <head>
-  <title>Home</title>
+  <title>Esko</title>
+  <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:description"
-  content="test"/>
+
+  <meta name="robots" content="all">
+  <meta name="description" content="It's all about experience">
+  <meta name="googlebot" content="notranslate">
+  <meta name="google" content="nopagereadaloud">
+
+  <meta property="og:description" content="It's all about experience" />
   <meta property="og:title" content="Esko" />
+
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
+
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" type="text/css" href="css/slideshow.css" />
   <script src="js/slideshow/modernizr.custom.js"></script>
 </head>
@@ -85,8 +98,19 @@
       });
     </script>
   </div>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+
   <script src="js/aos.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
