--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 
 <head>
   <title>Esko</title>
+  <link rel="icon" href="/images/favicon.png">
   <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <meta name="robots" content="all">
+  <meta name="title" content="Esko">
   <meta name="description" content="It's all about experience">
   <meta name="googlebot" content="notranslate">
   <meta name="google" content="nopagereadaloud">
 
   <meta property="og:description" content="It's all about experience" />
   <meta property="og:title" content="Esko" />
+  <meta property="og:image" content="/images/logo.png">
 
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
