--- a/work/people_and_portraits.html
+++ b/work/people_and_portraits.html
@@ -3,10 +3,11 @@
 
 <head>
   <title>Raving & DJing</title>
+  <link rel="icon" href="/images/favicon.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="robots" content="noindex,nofollow">
-  
+
   <link rel="stylesheet" href="../fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="../fonts/icomoon/style.css">
   <link rel="stylesheet" href="../css/magnific-popup.css">
