--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <meta property="og:description" content="It's all about experience" />
   <meta property="og:title" content="Esko" />
-  <meta property="og:image" content="/images/logo.png">
+  <meta property="og:image" content="https://eskoduraki.com/images/logo.png">
 
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
