--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo.png" class="logo-img" alt=""></a>
+            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo1.png" class="logo-img" alt=""></a>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block text-right" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
