--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <meta name="googlebot" content="notranslate">
   <meta name="google" content="nopagereadaloud">
 
+  <meta property="og:image" content="https://eskoduraki.com/images/logo-social.png">
   <meta property="og:description" content="It's all about experience" />
   <meta property="og:title" content="Esko" />
-  <meta property="og:image" content="https://eskoduraki.com/images/logo.png">
+
 
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -52,7 +53,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo.png" class="logo-img" alt=""></a>
+            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo1.png" class="logo-img" alt=""></a>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block text-right" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
