--- a/about.html
+++ b/about.html
@@ -10,20 +10,32 @@
 
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
-  <link rel="stylesheet" href="css/jquery-ui.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/lightgallery.min.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
   <style>
+    img {
+      pointer-events: none;
+    }
 
+    .site-section {
+      margin-top: -20px;
+    }
+
+    @media (min-width:768px) {
+      .site-section {
+        margin-top: -100px;
+      }
+    }
+
+    h5 {
+      text-align: justify;
+    }
   </style>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
   <div class="site-wrap">
     <div class="site-mobile-menu">
@@ -40,7 +52,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo1.png" class="logo-img" alt=""></a>
+            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo.png" class="logo-img" alt=""></a>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block text-right" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -67,20 +79,21 @@
     <div class="site-section" data-aos="fade">
       <div class="container-fluid">
 
-
-        <div class="row mb-5">
-          <div class="col-md-5 ml-auto">
-            <img src="images/esko.jpg" alt="Images" class="img-fluid">
+        <div class="row">
+          <div class="col-md-10 ml-auto mr-auto">
+            <img src="images/esko.jpg" alt="" class="img-fluid" style="margin-bottom: 50px;">
           </div>
-          <div class="col-md-4 ml-auto mr-auto">
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus,
-              ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae
-              fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta
-            </p>
+          <div class="col-md-10 ml-auto mr-auto" style="margin-bottom: 30px;">
+            <h5>Esko Duraki is a photographer, who specializes in using unconventional lighting and locations for his
+              photography, which is with the use of minimal gear. Esko graduated from University of Prishtina with a BFA
+              in Graphic Design and Photography. While he is especially known for his rave photographs and work in the
+              concert industry, his client work includes stock and food photography, ecommerce, lifestyle, fashion and
+              corporate. Esko Duraki is based in Kosovo and is available for photo commissions worldwide.</h5>
+          </div>
+          <div class="col-md-10  ml-auto mr-auto">
+            <img src="images/clients.png" alt="" class="img-fluid">
           </div>
         </div>
-
 
 
       </div>
@@ -89,17 +102,9 @@
   </div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
 
   <script src="js/aos.js"></script>
-  <script src="js/lightgallery-all.min.js"></script>
   <script src="js/main.js"></script>
 
   <script>
