--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
 
 <head>
-  <title>Esko</title>
-  <link rel="icon" href="/images/favicon.png">
-  <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34=">
 
-  <meta name="robots" content="all">
-  <meta name="title" content="Esko">
+  <title>Esko Duraki</title>
   <meta name="description" content="It's all about experience">
+  <meta name="keywords" content="Photography, Portfolio">
+  <link rel="icon" type="image/ico" href="/images/favicon.png">
+
+  <!-- Index -->
+  <meta name="robots" content="all">
   <meta name="googlebot" content="notranslate">
   <meta name="google" content="nopagereadaloud">
+  <link rel="canonical" href="https://eskoduraki.com/" />
 
+  <!-- Social Media -->
   <meta property="og:image" content="https://eskoduraki.com/images/logo-social.png">
   <meta property="og:description" content="It's all about experience" />
   <meta property="og:title" content="Esko" />
@@ -22,19 +27,16 @@
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-  <link rel="stylesheet" href="css/magnific-popup.css">
-  <link rel="stylesheet" href="css/jquery-ui.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="css/slideshow.css" />
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/slideshow.css">
+
   <script src="js/slideshow/modernizr.custom.js"></script>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
   <div class="site-wrap">
 
@@ -53,15 +55,15 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <a href="index.html"><img src="images/logo1.png" class="logo-img" alt=""></a>
+            <a href="index.html"><img src="images/logo.png" class="logo-img" alt="Logo image"></a>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block text-right" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto align-items-end d-none d-lg-block">
-                <li><a href="work.html">Work</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="work.html" title="Work">Work</a></li>
+                <li><a href="about.html" title="About">About</a></li>
+                <li><a href="contact.html" title="Contact">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -93,28 +95,22 @@
 
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/slideshow/jquery.imagesloaded.min.js"></script>
-    <script src="js/slideshow/cbpBGSlideshow.min.js"></script>
-    <script>
-      $(function () {
-        cbpBGSlideshow.init();
-      });
-    </script>
   </div>
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="js/slideshow/jquery.imagesloaded.min.js"></script>
+  <script src="js/slideshow/cbpBGSlideshow.min.js"></script>
+  <script>
+    $(function () {
+      cbpBGSlideshow.init();
+    });
+  </script>
+
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/swiper.min.js"></script>
 
   <script src="js/aos.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
