--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,8 @@
 
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
-  <link rel="stylesheet" href="css/jquery-ui.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/lightgallery.min.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
   <style>
@@ -38,10 +34,28 @@
         margin-top: -100px;
       }
     }
+
+    a {
+      color: #93d500;
+    }
+
+    a:hover {
+      color: #91d5009c;
+    }
+
+    .social img {
+      margin-right: 5px;
+      width: 30px;
+      height: auto;
+    }
+
+    .social img:hover {
+      filter: brightness(80%);
+    }
   </style>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
   <div class="site-wrap">
 
@@ -55,15 +69,13 @@
     </div>
 
 
-
-
     <header class="site-navbar py-3" role="banner">
 
       <div class="container-fluid">
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo1.png" class="logo-img" alt=""></a>
+            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo.png" class="logo-img" alt=""></a>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block text-right" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -87,11 +99,8 @@
       </div>
     </header>
 
-
-
     <div class="site-section" data-aos="fade">
       <div class="container">
-
         <div class="row">
           <div class="col-lg-8 mb-5">
             <form action="https://formsubmit.co/eskoduraki@gmail.com" method="POST">
@@ -134,10 +143,11 @@
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <button type="submit" value="Send Message" class="btn py-2 px-4 text-white">Send
-                    Message</button>
+                  <button type="submit" value="Send Message" class="btn py-2 px-4 text-white">
+                    <div class="btn-text" style="margin-top:-2px;">Send Message</div>
+                  </button>
                 </div>
-                <input type="hidden" name="_next" value="https://eskoduraki/index.html">
+                <input type="hidden" name="_next" value="#">
               </div>
 
 
@@ -146,40 +156,34 @@
           <div class="col-lg-3 ml-auto">
             <div class="mb-3">
 
-              <p class="mb-0 font-weight-bold text-white">Phone</p>
+              <p class="mb-0 font-weight-bold">Phone</p>
               <p class="mb-4"><a href="#">+383/49-177-598</a></p>
 
-              <p class="mb-0 font-weight-bold text-white">Email Address</p>
+              <p class="mb-0 font-weight-bold">Email Address</p>
               <p class="mb-4"><a href="#">eskoduraki@gmail.com</a></p>
 
             </div>
-
+            <div class="social">
+              <a href="https://www.instagram.com/esko__xx/" target="_blank">
+                <img src="images/icons/instagram.png" alt="">
+              </a>
+              <a href="https://www.facebook.com/profile.php?id=100002435533401" target="_blank">
+                <img src="images/icons/facebook.png" alt="">
+              </a>
+              <a href="https://www.behance.net/Esko" target="_blank">
+                <img src="images/icons/behance.png" alt="">
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-
-
-
-
-
   </div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/swiper.min.js"></script>
 
   <script src="js/aos.js"></script>
-  <script src="js/lightgallery-all.min.js"></script>
-
   <script src="js/main.js"></script>
 
   <script>
