--- a/thank_you.html
+++ b/thank_you.html
@@ -10,18 +10,13 @@
 
     <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/lightgallery.min.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
     <div class="site-wrap">
 
@@ -46,7 +41,6 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/aos.js"></script>
-    <script src="js/lightgallery-all.min.js"></script>
 
     <script src="js/main.js"></script>
 
