--- a/work.html
+++ b/work.html
@@ -11,24 +11,19 @@
   <link rel="stylesheet" href="fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-  <link rel="stylesheet" href="css/magnific-popup.css">
-  <link rel="stylesheet" href="css/jquery-ui.css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/lightgallery.min.css">
 
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
 <style>
-  h2 {
+  h4 {
     text-transform: uppercase;
   }
 </style>
 
-<body>
+<body oncontextmenu="return false;">
 
   <div class="site-wrap">
 
@@ -46,7 +41,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo1.png" class="logo-img" alt=""></a>
+            <a href="index.html" class="text-white h2 mb-0"><img src="images/logo.png" class="logo-img" alt=""></a>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block text-right" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -63,7 +58,7 @@
             </div>
 
             <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#"
-                class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
+                class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h4"></span></a></div>
 
           </div>
 
@@ -78,7 +73,7 @@
             <div class="image-wrap-2">
 
               <div class="image-info">
-                <h2 class="mb-3">Raving & DJing</h2>
+                <h4 class="mb-3">Raving & DJing</h4>
               </div>
 
               <img src="images/Raving_and_Djing/Large/1.jpg" alt="Image" class="img-fluid">
@@ -92,7 +87,7 @@
             <div class="image-wrap-2">
 
               <div class="image-info">
-                <h2 class="mb-3">Concerts</h2>
+                <h4 class="mb-3">Concerts</h4>
               </div>
 
               <img src="images/Concerts/Large/1.jpg" alt="Image" class="img-fluid">
@@ -106,7 +101,7 @@
             <div class="image-wrap-2">
 
               <div class="image-info">
-                <h2 class="mb-3">Theater Performances</h2>
+                <h4 class="mb-3">Theater Performances</h4>
               </div>
 
               <img src="images/Theater/Large/22.jpg" alt="Image" class="img-fluid">
@@ -120,7 +115,7 @@
             <div class="image-wrap-2">
 
               <div class="image-info">
-                <h2 class="mb-3">Commercial</h2>
+                <h4 class="mb-3">Commercial</h4>
               </div>
 
               <img src="images/commercial.jpg" alt="Image" class="img-fluid">
@@ -134,7 +129,7 @@
             <div class="image-wrap-2">
 
               <div class="image-info">
-                <h2 class="mb-3">People & Portraits</h2>
+                <h4 class="mb-3">People & Portraits</h4>
               </div>
 
               <img src="images/people_and_portrait.jpg" alt="Image" class="img-fluid">
@@ -148,7 +143,7 @@
             <div class="image-wrap-2">
 
               <div class="image-info">
-                <h2 class="mb-3">Cars</h2>
+                <h4 class="mb-3">Cars</h4>
               </div>
 
               <img src="images/Cars/Large/1.jpg" alt="Image" class="img-fluid">
@@ -161,27 +156,14 @@
       </div>
 
       <script src="js/jquery-3.3.1.min.js"></script>
-      <script src="js/jquery-migrate-3.0.1.min.js"></script>
-      <script src="js/jquery-ui.js"></script>
-      <script src="js/popper.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
-      <script src="js/owl.carousel.min.js"></script>
-      <script src="js/jquery.stellar.min.js"></script>
-      <script src="js/jquery.countdown.min.js"></script>
-      <script src="js/jquery.magnific-popup.min.js"></script>
       <script src="js/swiper.min.js"></script>
       <script src="js/aos.js"></script>
 
       <script src="js/picturefill.min.js"></script>
-      <script src="js/lightgallery-all.min.js"></script>
 
       <script src="js/main.js"></script>
 
-      <script>
-        $(document).ready(function () {
-          $('#lightgallery').lightGallery();
-        });
-      </script>
 
 </body>
 
