--- a/work/raving_and_djing.html
+++ b/work/raving_and_djing.html
@@ -10,18 +10,16 @@
 
   <link rel="stylesheet" href="../fonts/Exensa-grotesk/stylesheet.css">
   <link rel="stylesheet" href="../fonts/icomoon/style.css">
-  <link rel="stylesheet" href="../css/magnific-popup.css">
-  <link rel="stylesheet" href="../css/jquery-ui.css">
-  <link rel="stylesheet" href="../css/owl.carousel.min.css">
-  <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/lightgallery.min.css">
   <link rel="stylesheet" href="../css/aos.css">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/scroll.css">
 
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
   <div class="site-wrap">
     <div class="site-mobile-menu">
@@ -38,7 +36,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <a href="../index.html" class="text-white h2 mb-0"><img src="../images/logo1.png" class="logo-img"
+            <a href="../index.html" class="text-white h2 mb-0"><img src="../images/logo.png" class="logo-img"
                 alt="esko logo"></a>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block text-right" data-aos="fade-down">
@@ -65,7 +63,9 @@
       </div>
     </header>
 
+    <a id="button"></a>
     <div class="gallery" id="lightgallery">
+
       <div class="" data-aos="fade" data-src="../images/Raving_and_Djing/Large/1.jpg">
         <a href="#">
           <img src="../images/Raving_and_Djing/Small/1.jpg" alt="" loading="lazy">
@@ -230,14 +230,7 @@
   </div>
 
   <script src="../js/jquery-3.3.1.min.js"></script>
-  <script src="../js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="../js/jquery-ui.js"></script>
-  <script src="../js/popper.min.js"></script>
   <script src="..js/bootstrap.min.js"></script>
-  <script src="../js/owl.carousel.min.js"></script>
-  <script src="../js/jquery.stellar.min.js"></script>
-  <script src="../js/jquery.countdown.min.js"></script>
-  <script src="../js/jquery.magnific-popup.min.js"></script>
   <script src="../js/swiper.min.js"></script>
 
   <script src="../js/aos.js"></script>
@@ -247,6 +240,7 @@
   <script src="../js/jquery.mousewheel.min.js"></script>
 
   <script src="../js/main.js"></script>
+  <script src="../js/scroll.js"></script>
 
   <script>
     $(document).ready(function () {
