--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
                     <div class="btn-text" style="margin-top:-2px;">Send Message</div>
                   </button>
                 </div>
-                <input type="hidden" name="_next" value="#">
+                <input type="hidden" name="_next" value="https://eskoduraki.com/">
               </div>
 
 
