--- a/index.html
+++ b/index.html
@@ -50,28 +50,42 @@
     <div class="container">
       <div class="main">
         <ul id="cbp-bislideshow" class="cbp-bislideshow">
-          <li><img data-desktop="images/work/Theater/11.jpg" data-mobile="images/home/mobile/1.jpg" alt="image01" />
+          <li><img data-desktop="/images/work/Theater/original/11.jpg" data-mobile="/images/home/mobile/1.jpg"
+              alt="image01" />
           </li>
-          <li><img data-desktop="images/work/Arti-Zanat/2.jpg" data-mobile="images/home/mobile/2.jpg" alt="image02" />
+          <li><img data-desktop="/images/work/Arti-Zanat/original/2.jpg" data-mobile="/images/home/mobile/2.jpg"
+              alt="image02" />
           </li>
-          <li><img data-desktop="images/work/Theater/10.jpg" data-mobile="images/home/mobile/3.jpg" alt="image03" />
+          <li><img data-desktop="/images/work/Theater/original/10.jpg" data-mobile="/images/home/mobile/3.jpg"
+              alt="image03" />
           </li>
-          <li><img data-desktop="images/work/Arti-Zanat/7.jpg" data-mobile="images/home/mobile/4.jpg" alt="image04" />
+          <li><img data-desktop="/images/work/Arti-Zanat/original/7.jpg" data-mobile="/images/home/mobile/4.jpg"
+              alt="image04" />
           </li>
-          <li><img data-desktop="images/work/Theater/15.jpg" data-mobile="images/home/mobile/5.jpg" alt="image05" />
+          <li><img data-desktop="/images/work/Theater/original/15.jpg" data-mobile="/images/home/mobile/5.jpg"
+              alt="image05" />
           </li>
-          <li><img data-desktop="images/work/People/2.jpg" data-mobile="images/home/mobile/6.jpg" alt="image06" /></li>
-          <li><img data-desktop="images/work/Concerts/16.jpg" data-mobile="images/home/mobile/7.jpg" alt="image07" />
+          <li><img data-desktop="/images/work/People/original/2.jpg" data-mobile="/images/home/mobile/6.jpg"
+              alt="image06" /></li>
+          <li><img data-desktop="/images/work/Concerts/original/16.jpg" data-mobile="/images/home/mobile/7.jpg"
+              alt="image07" />
           </li>
-          <li><img data-desktop="images/work/People/1.jpg" data-mobile="images/home/mobile/8.jpg" alt="image08" /></li>
-          <li><img data-desktop="images/work/Concerts/19.jpg" data-mobile="images/home/mobile/9.jpg" alt="image09" />
+          <li><img data-desktop="/images/work/People/original/1.jpg" data-mobile="/images/home/mobile/8.jpg"
+              alt="image08" /></li>
+          <li><img data-desktop="/images/work/Concerts/original/19.jpg" data-mobile="/images/home/mobile/9.jpg"
+              alt="image09" />
           </li>
-          <li><img data-desktop="images/work/Rave/1.jpg" data-mobile="images/home/mobile/10.jpg" alt="image10" /></li>
-          <li><img data-desktop="images/work/Concerts/17.jpg" data-mobile="images/home/mobile/11.jpg" alt="image11" />
+          <li><img data-desktop="/images/work/Rave/original/1.jpg" data-mobile="/images/home/mobile/10.jpg"
+              alt="image10" /></li>
+          <li><img data-desktop="/images/work/Concerts/original/17.jpg" data-mobile="/images/home/mobile/11.jpg"
+              alt="image11" />
           </li>
-          <li><img data-desktop="images/work/Rave/16.jpg" data-mobile="images/home/mobile/12.jpg" alt="image12" /></li>
-          <li><img data-desktop="images/work/People/5.jpg" data-mobile="images/home/mobile/13.jpg" alt="image13" /></li>
-          <li><img data-desktop="images/work/Rave/13.jpg" data-mobile="images/home/mobile/14.jpg" alt="image14" /></li>
+          <li><img data-desktop="/images/work/Rave/original/16.jpg" data-mobile="/images/home/mobile/12.jpg"
+              alt="image12" /></li>
+          <li><img data-desktop="/images/work/People/original/5.jpg" data-mobile="/images/home/mobile/13.jpg"
+              alt="image13" /></li>
+          <li><img data-desktop="/images/work/Rave/original/13.jpg" data-mobile="/images/home/mobile/14.jpg"
+              alt="image14" /></li>
         </ul>
       </div>
 
