--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body oncontextmenu="return false;">
   <header id="navbar" class="navbar">
     <div class="logo">
-      <a href="index.html">
+      <a href="/">
         <img src="/images/logos/logo.svg" alt="Esko Logo" class="logo-image">
       </a>
     </div>
